
2008-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Makefile.am, Makefile.in: Correct small automake typo with
	"autoconf" libtool macro directory.

	* configure: Regenerated using autogen.sh.

	* include/openbabel/grid.h: Fix compiler warning -- make sure to
	return values in all methods.

	* src/forcefield.cpp: Fix compiler warning "default" not "dafault"
	in switch statements.

2008-06-01  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/atomrecord.cpp: Call OBAtom::ForceImplH() for all atoms.
	Loading a pdb file and calling OBMol::AddHydrogens() added only on
	hydrogen.

2005-05-31  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Fixed two of the three remaining
	std::vectors based on examples found in Krugle code search

2005-05-30  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Fixed most of the std::vectors by using
	weird macro described in std_vector.i in the SWIG distribution

2005-05-30  Marcus D. Hanwell  <marcus@cryos.org>

	* configure, configure.in: Stop the wx-config test being called when
	the wx-gui is not enabled - bug 1979603.

2005-05-30  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-csharp.i: Added header file to SWIG wrapper. Also
	removed several of the vector templates. These don't seem to be
	handled correctly by SWIG (should report bug to them).

2008-05-30  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: OBFFConstraints::Clear(), clear all the bitvecs.
	ConjugateGradientsTakeNSteps(), set _grad1[] to (0,0,0) when atom is
	fixed and not _gradientPtr (_grad1 is used for linesearch).
	Setup() & SetConstraints, check if SetupCalculations needs to be
	called. This is the case when the ignored bitvecs of both
	OBFFConstraints are different.

	* include/openbabel/forcefield.h: OBFFConstraints::GetIgnoredBitVec().
	Used in Setup() & SetConstraints().

2008-05-28 Chris Morley

	* windows-vc2005/OBCSharp/OBCSharp.vcproj,